# render-engine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  camera-stuff.txt  plan.txt
examples/: Cargo.toml  annoyances.txt
examples/meshes/: dodge.mtl
examples/shaders/base/: frag.glsl  vert.glsl
examples/shaders/data-testing/: frag_tex.glsl  vert_model.glsl  vert_tex.glsl
examples/shaders/depth-prepass/: depth_view_frag.glsl  depth_view_vert.glsl  object_frag.glsl  object_vert.glsl  vert.glsl
examples/shaders/lighting/: object_frag.glsl  object_vert.glsl
examples/shaders/multipass/: postpro_frag.glsl  postpro_vert.glsl  tri_vert.glsl
examples/shaders/normal-mapping/: debug_frag.glsl  debug_vert.glsl  object_frag.glsl  object_frag_debug.glsl  object_vert.glsl
examples/shaders/obj-viewer/: frag.glsl  vert.glsl
examples/shaders/point-shadow/: final_frag.glsl  final_vert.glsl  shadow_cast_frag.glsl  shadow_cast_vert.glsl
examples/shaders/pretty/: all_frag.glsl  ambient_only_frag.glsl  blur_frag.glsl  depth_prepass_vert.glsl  diffuse_and_light_frag.glsl  diffuse_and_spec.glsl  diffuse_light_distance_frag.glsl  diffuse_only_frag.glsl  diffuse_spec_normal.glsl  display_cubemap_frag.glsl  fullscreen_vert.glsl  light_frag.glsl  light_vert.glsl  normals_only.glsl  shadow_cast_frag.glsl  shadow_cast_vert.glsl  shadows_and_color.glsl  (+6 more)
examples/src/: lib.rs  mesh.rs
render-engine/: Cargo.toml  base-perf-hist.txt  camera-stuff.txt  plan.txt
render-engine/src/: camera.rs  collection.rs  input.rs  lib.rs  mesh.rs  render_passes.rs  system.rs  utils.rs
(+39 files in other folders)
