[package]
name = "render-engine"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
vulkano = { path = "../vulkano-master/vulkano" }
vulkano-win = { path = "../vulkano-master/vulkano-win" }
vulkano-shaders = { path = "../vulkano-master/vulkano-shaders" }
winit = "0.19"
cgmath = "0.17"
image = "0.21"
time = "0.1.38"
nalgebra-glm = "0.4"
re-ll = { path = "../re-ll" }

[profile.release]
debug = true