[package]
name = "tests-render-engine"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render-engine = { path = "../render-engine/" }
re-ll = { path = "../re-ll/" }
nalgebra-glm = "0.4.2"
vulkano = "0.14"
vulkano-win = "0.14"
winit = "0.19"
rand = "0.7.2"
tobj = "0.1.11"
image = "0.22.3"

[profile.release]
debug = true
